// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox component renders correctly with search by genre selected 1`] = `
Array [
  <h2>
    Find your movie
  </h2>,
  <input
    className={undefined}
    onChange={[MockFunction]}
    placeholder="Action"
    type="text"
    value="test2"
  />,
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Search by
      <button
        className={undefined}
        onClick={[Function]}
      >
        title
      </button>
      <button
        className={undefined}
        onClick={[Function]}
      >
        genre
      </button>
    </div>
    <a
      href="/search/genres/test2"
      onClick={[Function]}
    >
      <button
        className={undefined}
        onClick={[Function]}
      >
        Search
      </button>
    </a>
  </div>,
]
`;

exports[`SearchBox component renders correctly with search by title selected 1`] = `
Array [
  <h2>
    Find your movie
  </h2>,
  <input
    className={undefined}
    onChange={[MockFunction]}
    placeholder="Kill Bill"
    type="text"
    value="test"
  />,
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      Search by
      <button
        className={undefined}
        onClick={[Function]}
      >
        title
      </button>
      <button
        className={undefined}
        onClick={[Function]}
      >
        genre
      </button>
    </div>
    <a
      href="/search/title/test"
      onClick={[Function]}
    >
      <button
        className={undefined}
        onClick={[Function]}
      >
        Search
      </button>
    </a>
  </div>,
]
`;
